opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jenga"
bug-reports: "https://github.com/janestreet/jenga/issues"
dev-repo: "git+https://github.com/janestreet/jenga.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "jenga" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "async_inotify"
  "command_rpc"
  "core"
  "fieldslib"
  "jbuilder"                {build & >= "1.0+beta2"}
  "ocaml_plugin"
  "ppx_driver"
  "ppx_jane"
  "sexplib"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Build system
"
