opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jenga"
bug-reports: "https://github.com/janestreet/jenga/issues"
dev-repo: "git+https://github.com/janestreet/jenga.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "async_inotify"
  "command_rpc"
  "core"
  "fieldslib"
  "ocaml_plugin"
  "ppx_jane"
  "sexplib"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Industrial strength, full-featured build system

Jenga is an executable and library for building build systems. It is
fast, extremely incremental and massively scalable. It is the build
system used at Jane Street on a daily basis to build huge repositories
containing millions of lines of OCaml code.

It offers many features to make OCaml development more confortable and
productive, such as excelent Emacs integration and a server mode for
very quick feedback even with massive repositories. Although some
parts of this infrastructure are not yet publicly released, so
currently the Emacs integration is not available outiside of Jane
Street.

To do all this jenga has a lot of dependencies, which doesn't make it
suitable as a dependency for released packages. Moreover it is not
fully portable and the only set of build rules available for jenga is
aimed at a particular configuration.

To fill this gap, jbuilder was develop. It is a modern, portable and
dependency free build system that takes the hassle out of OCaml
development. Hopefully soon, there will be a bridge between jbuilder
and jenga, allowing jbuilder projects to build with jenga out of the
box.
"
